# vibescraper

./: .gitignore  LICENSE  README.md  devlog.md  progress.md  pyproject.toml  results.json
src/vibescraper/: brave_search.py  change_search_api.py  check_api_keys.py  config.py  db_schema.py  google_search.py  html_parser.py  json_utils.py  main.py  openai_utils.py  page_embedder.py  timer_decorator.py  vibe_search.py
