[project]
name = "vibescraper"
version = "0.1.4"
description = "A semantic web scraping and summarization toolkit."
authors = [
    {name = "u2084511felix", email = "79988595+u2084511felix@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "google-api-python-client>=2.168.0,<3.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "requests>=2.32.3,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "html5lib>=1.1,<2.0",
    "numpy>=2.2.5,<3.0.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "openai>=1.76.2,<2.0.0",
    "tiktoken>=0.9.0,<0.10.0",
]

[tool.poetry]
packages = [{ include = "vibescraper", from = "src" }]

[project.scripts]
check-api-keys = "vibescraper.check_api_keys:main"
change-search-api = "vibescraper.change_search_api:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

